[package]
name = "read_imagescope_xml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.36.0", features = ["serialize"] }
serde = { version = "1.0.204", features = ["derive"] }
 
